# mrvcr

./: .Rbuildignore  .gitignore  DESCRIPTION  LICENSE  LICENSE.md  NAMESPACE  README.Rmd  README.md  README.qmd  Read-and-delete-me
R/: RcppExports.R  extendr-wrappers.R  fit_mrvc.R  glm.R  lm.R  methods.R  mvcm.R  utils.R  vcm.R
bench/: bench-lm-glm.R
man/: fit_mrvc.Rd  glm.Rd  lm.Rd  mrvcr-package.Rd  mvcm.Rd  vcm_zzt.Rd
src/: Makevars.in  Makevars.win.in  RcppExports.cpp  entrypoint.c  kron_mv.cpp  mrvcr-win.def  rcpp_fit_mrvc.cpp
src/rust/: Cargo.toml  document.rs
src/rust/src/: lib.rs
src/rust/src/core/: families.rs  method.rs  mod.rs  pet.rs  storage.rs
src/rust/src/models/: mod.rs
src/rust/src/models/linear/: glm.rs  lm.rs  mod.rs
src/rust/src/models/mixed/: glmm.rs  lmm.rs  mod.rs
src/rust/src/models/time_series/: arima.rs  mod.rs
src/rust/src/models/vcomp/: mod.rs  mvcm.rs  vcm.rs
tests/: testthat.R
tests/testthat/: test-lm-glm.R
vignettes/: mrvcr-intro.Rmd
