[package]
name = 'mrvcr'
publish = false
version = '0.1.0'
edition = '2021'
rust-version = '1.95'

[lib]
crate-type = [ 'rlib', 'staticlib' ]
name = 'mrvcr'

[[bin]]
name = 'document'
path = 'document.rs'

[dependencies]
extendr-api = '0.9.0'
dyn-stack = '0.13.2'
faer = { version = "0.24", features = ["std"] }

[profile.release]
lto = true
codegen-units = 1
